--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>Fusion Byte Tutorial</title>
+    <title>Wenting Rocks!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-	<h1>Data Pipeline Project Fusion Byte Example</h1>
+	<h1>Tingting & XX Forever! </h1>
         <p>This is the Fusion Byte of the Data Pipeline class. This
         page should explain what question you want to answer and use
         the visualization tools provided by Google Fusion Table to
